# meowl

./: .gitignore  Cargo.toml  README.md
src/: main.rs  startup.rs
src/bot/: error.rs  events.rs  framework.rs  mod.rs  registry.rs
src/bot/error/: env.rs  framework.rs  http.rs  mod.rs
src/commands/: commands.rs  help.rs  mod.rs  qr.rs
src/components/: embed.rs
