[package]
name = "meowl-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
serenity = { version = "0.11", features = ["client", "gateway", "model", "rustls_backend", "framework"] }
dotenvy = "0.15"
thiserror = "2"
anyhow = "1.0"
tracing = "0.1.41"
